--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 aiohttp = "^3.4"
+asyncio_throttle = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.0"
