--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ asyncio_throttle = "^0.1.1"
 pytest = "^4.0"
 pytest-asyncio = "^0.9.0"
 asynctest = "^0.12.2"
+coveralls = "^1.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
