--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^4.0"
 pytest-asyncio = "^0.10.0"
 asynctest = "^0.12.2"
 coveralls = "^1.5"
+twine = "^1.13"
 
 [build-system]
 requires = ["poetry>=0.12"]
