--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 
 install:
   - pip install pip -U
-  - python get-poetry.py --preview -y
+  - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
   - source $HOME/.poetry/env
   - poetry install -v
 
