--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ homepage = "https://github.com/ape364/aioetherscan"
 python = "^3.7"
 aiohttp = "^3.4"
 asyncio_throttle = "^1.0.1"
+aiohttp-retry = "^2.8.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
