--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,14 @@ license = "MIT"
 homepage = "https://github.com/ape364/aioetherscan"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.9"
 aiohttp = "^3.4"
 asyncio_throttle = "^1.0.1"
 aiohttp-retry = "^2.8.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
-pytest-asyncio = "^0.18.3"
-asynctest = "^0.13.0"
+pytest-asyncio = "^0.20.3"
 coveralls = "^3.3.1"
 twine = "^4.0.1"
 
@@ -23,3 +22,6 @@ twine = "^4.0.1"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
