--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ build-backend = "poetry.masonry.api"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+
+[tool.coverage.run]
+relative_files = true
