--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.pytest.ini_options]
+pythonpath = [
+    "."
+]
 asyncio_mode = "auto"
 
 [tool.coverage.run]
