--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ aiohttp-retry = "^2.8.3"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 pytest-asyncio = "^0.20.3"
-coveralls = "^3.3.1"
 pre-commit = "^3.1.1"
+coveralls = {extras = ["toml"], version = "^3.3.1"}
 
 [build-system]
 requires = ["poetry>=0.12"]
