--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ aiohttp-retry = "^2.8.3"
 pytest = "^7.1.2"
 pytest-asyncio = "^0.20.3"
 pre-commit = "^3.1.1"
-coveralls = {extras = ["toml"], version = "^3.3.1"}
+coveralls = "^3.3.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
