--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -9,7 +9,7 @@ cfgv==3.3.1 ; python_version >= "3.9" and python_version < "4.0"
 charset-normalizer==3.0.1 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
 coverage==6.5.0 ; python_version >= "3.9" and python_version < "4.0"
-coveralls[toml]==3.3.1 ; python_version >= "3.9" and python_version < "4.0"
+coveralls==3.3.1 ; python_version >= "3.9" and python_version < "4.0"
 distlib==0.3.6 ; python_version >= "3.9" and python_version < "4.0"
 docopt==0.6.2 ; python_version >= "3.9" and python_version < "4.0"
 exceptiongroup==1.1.0 ; python_version >= "3.9" and python_version < "3.11"
