--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,11 @@ aiohttp-retry = "^2.8.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
-pytest-asyncio = "^0.20.3"
+pytest-asyncio = "^0.21.0"
+pytest-cov = { extras = ["toml"], version = "^4.0.0" }
 pre-commit = "^3.1.1"
 coveralls = "^3.3.1"
+
 
 [build-system]
 requires = ["poetry>=0.12"]
@@ -24,9 +26,23 @@ build-backend = "poetry.masonry.api"
 
 [tool.pytest.ini_options]
 pythonpath = [
-    "."
+    "aioetherscan"
 ]
 asyncio_mode = "auto"
 
+#[tool.pytest.ini_options]
+#pythonpath = [
+#    "."
+#]
+#asyncio_mode = "auto"
+
 [tool.coverage.run]
 relative_files = true
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 80
+exclude_lines = [
+    "pragma: no cover",
+    "if TYPE_CHECKING:"
+]
