--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,12 @@ repos:
       - id: poetry-export
         name: poetry-export prod
         args: [-f, requirements.txt, -o, requirements.txt, --without-hashes]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.1.6
+    hooks:
+      # Run the linter.
+      - id: ruff
+        args: [ --fix, --show-fixes]
+      # Run the formatter.
+      - id: ruff-format
