--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Coveralls
         uses: AndreMiras/coveralls-python-action@develop
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
           flag-name: Unit Test
 
